// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tile 1`] = `
<div
  className="mb-24 print:mb-12"
>
  <div
    className="flex gap-1"
  >
    <h2
      className="font-semibold mb-7 text-2xl text-zinc-800 dark:text-zinc-200"
    >
      Test Title
    </h2>
  </div>
  Tile
</div>
`;

exports[`Tile with badge 1`] = `
<div
  className="mb-24 print:mb-12"
>
  <div
    className="flex gap-1"
  >
    <h2
      className="font-semibold mb-7 text-2xl text-zinc-800 dark:text-zinc-200"
    >
      Test Title
    </h2>
    <span />
  </div>
  Tile with badge
</div>
`;

exports[`Tile without title 1`] = `
<div
  className="mb-24 print:mb-12"
>
  <div
    className="flex gap-1"
  />
  Tile without title
</div>
`;
